# Keras-FewShotLearning

./: .gitignore  .polyaxonignore  README.md  initial_encoder.h5  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: install.yml  pythonpackage.yml  tests.yml
.polyaxon/: .polyaxonproject  .polyaxonxp
datasets/: __init__.py  omniglot.py
keras_fsl/: utils.py
keras_fsl/annotations/flows/: __init__.py  coordinates_to_imgaug.py
keras_fsl/callbacks/: __init__.py  binary_statistics.py  tensorboard_save_figures.py
keras_fsl/datasets/: __init__.py  omniglot.py
keras_fsl/layers/: __init__.py  centroids_matrix.py  classification.py  gram_matrix.py  slicing.py  support_layer.py
keras_fsl/losses/: __init__.py  classification_loss.py  gram_matrix_losses.py  kernel_losses.py  product_loss.py  yolo_loss.py
keras_fsl/metrics/: __init__.py  gram_matrix_metrics.py
keras_fsl/models/: __init__.py  feature_pyramid_net.py  siamese_detector.py  siamese_nets.py
keras_fsl/postprocessings/: __init__.py
keras_fsl/preprocessings/: __init__.py  content_crops.py  yolo.py
keras_fsl/sequences/: abstract_sequence.py  proto_nets_sequence.py
keras_fsl/utils/: datasets.py  image_preprocessing.py  tensors.py  tfrecord_utils.py  training.py  types.py
logs/triplet_loss_cifar10/: .gitignore  results.csv
notebooks/: batch_centroids_loss_training.py  batch_gram_matrix_training.py  benchmark_caching_performance.ipynb  benchmark_caching_performance.py  build_and_serve_siamese_model.py  build_siamese_model_for_serving.py  centroids_similarity_training.py  classification_loss_training.py  content_crops.py  evaluate.py  food_101_training.py  kernel_loss_training.py  omniglot.ipynb  omniglot.py  product_loss_training.py  random_balanced_training.py  request_served_model.py  siamese_detector.py  siamese_nets_training.py  supervised_gram_matrix.py  support_layer_training.py  train_proto_nets.py  train_siamese_nets.py  triplet_loss_cifar10.py  triplet_loss_cifar100.py  triplet_loss_mnist.py  unsupervised_cifar10.py  unsupervised_cifar100.py
notebooks/omniglot/: basic_siamese_nets.ipynb  basic_siamese_nets.py  proto_nets.ipynb  proto_nets.py
polyaxon/: experiment.yaml  notebook.yaml
src/models/: __init__.py  siamese_nets.py
src/sequences/: __init__.py  abstract_sequence.py  proto_nets_sequence.py  sequence_abc.py
(+98 files in other folders)
