[tool.poetry]
name = "keras-fsl"
version = "0.1.0"
description = "Model builders for some State-of-the-Art architectures in few-shot and contrastive learning"
authors = ["Clément Walter <clement0walter@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.5"
tensorflow = { version = "^2", optional = true}
tensorflow-gpu = { version = "^2", optional = true}

[tool.poetry.dev-dependencies]
pandas = "^1.0.1"
imgaug = "^0.4.0"
numpy = "^1.18.1"
pyyaml = "^5.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 130
